# agent-shell

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: build.yml  ci.yml  publish.yml
agent-skills/delegating-code-review/: SKILL.md
agent-skills/invoking-cli-agents/: SKILL.md  api-reference.md
docs/development/: agent_parameter_comparison.md  disabled_tools.md  info.md  total_token_count.md
src/agent_shell/: process_cleanup.py  shell.py
tests/e2e/: test_claude_code_e2e.py  test_codex_e2e.py  test_copilot_cli_e2e.py  test_cursor_e2e.py  test_health_check_e2e.py  test_opencode_e2e.py  test_pi_e2e.py
tests/integration/: test_claude_code_integration.py  test_claude_code_mcp_integration.py  test_codex_integration.py  test_codex_mcp_integration.py  test_copilot_cli_integration.py  test_copilot_cli_mcp_integration.py  test_cursor_integration.py  test_cursor_mcp_integration.py  test_health_check_integration.py  test_opencode_integration.py  test_opencode_mcp_integration.py  test_pi_integration.py  test_pi_mcp_integration.py
tests/unit/: codex_fixtures.py  copilot_fixtures.py  cursor_fixtures.py  fixtures.py  opencode_fixtures.py  pi_fixtures.py  test_adapter_transport.py  test_cancel.py  test_codex_cancel.py  test_codex_execute.py  test_codex_parse_event.py  test_codex_warnings.py  test_copilot_cli_cancel.py  test_copilot_cli_execute.py  test_copilot_cli_parse_event.py  test_copilot_cli_stream.py  test_cursor_cancel.py  test_cursor_execute.py  test_cursor_parse_event.py  test_cursor_warnings.py  test_execute.py  test_health_probe.py  (+20 more)
(+11 files in other folders)
