[project]
name = "agent-shell-py"
version = "0.1.7"
description = "A lightweight abstraction for executing CLI coding agents headlessly"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = []
[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end tests that call real CLI agents (requires credentials, costs money)",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
