[project]
name = "agent-shell-py"
dynamic = ["version"]
description = "A lightweight abstraction for executing CLI coding agents headlessly"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = []

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/agent_shell/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_shell"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end tests that call real CLI agents (requires credentials, costs money)",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
